arkts_static_test/03_Types/ets_cases/3.5_Type_References/compile-fail/TYP_03_05_014_FAIL_UNDEFINED_QUALIFIED_NAME.ets
/**
 * @id TYP_03_05_014_FAIL_UNDEFINED_QUALIFIED_NAME
 * @expect compile-fail
 * @section 3.5
 * @design 引用 namespace 中不存在的类型
 * @note 反向用例：namespace 内部不存在的类型名
 */
namespace ns14 {
  export class Existing {
    v: int = 0
  }
}

function testUndefinedQualifiedFail(): void {
  let x: ns14.NonExistent = null
  let y: ns14.AlsoMissing = null
}